# Path-Tracer

./: CMakeLists.txt  README.md  materials.mtl  scene1.txt  scene11-01.txt  scene11-02.txt  scene11-03.txt  scene12-01.txt  scene12-02.txt  scene13-01.txt  scene13-03.txt  scene2.txt  scene4.txt  scene5.txt  scene6.txt  scene7.txt  scene8.txt  scene9-02.txt  scene9-03.txt  scene9-06.txt  stone.mtl
examples/: materials.mtl  scene1.txt  scene11-02.txt  scene11-03.txt  scene12-01.txt  scene13-02.txt  scene3.txt  scene5.txt  scene6.txt  scene7.txt  scene9-04.txt  scene9-05.txt  scene9.txt  stone.mtl
src/: main.cpp
src/body/: Body.h  Cylinder.cpp  Cylinder.h  KDTree.cpp  KDTree.h  Plane.cpp  Plane.h  PlaneCircle.cpp  PlaneCircle.h  Scene.cpp  Scene.h  Sphere.cpp  Sphere.h  SphereEnd.cpp  SphereEnd.h  Triangle.cpp  Triangle.h
src/camera/: Camera.cpp  Camera.h  CubeMapCamera.cpp  CubeMapCamera.h  OrthogonalCamera.cpp  OrthogonalCamera.h  PerspectiveCamera.cpp  PerspectiveCamera.h  SphericalCamera.cpp  SphericalCamera.h
src/command/: Command.cpp  Command.h  CommandCameraCubeMap.cpp  CommandCameraCubeMap.h  CommandCameraOrthogonal.cpp  CommandCameraOrthogonal.h  CommandCameraPerspective.cpp  CommandCameraPerspective.h  CommandCameraSpherical.cpp  CommandCameraSpherical.h  CommandEffectDOF.cpp  CommandEffectDOF.h  CommandEnvironment.cpp  CommandEnvironment.h  CommandLens.cpp  CommandLens.h  CommandLoadMaterialLibrary.cpp  CommandLoadMaterialLibrary.h  CommandLoadModel.cpp  CommandLoadModel.h  CommandMove.cpp  CommandMove.h  CommandPop.cpp  CommandPop.h  CommandRenderImage.cpp  CommandRenderImage.h  CommandRotateY.cpp  CommandRotateY.h  CommandSetBackground.cpp  CommandSetBackground.h  CommandSetMaterial.cpp  CommandSetMaterial.h  CommandSphere.cpp  CommandSphere.h  CommandTriangle.cpp  CommandTriangle.h  Comment.cpp  Comment.h  SceneBuilder.cpp  SceneBuilder.h
src/effect/: DepthOfFieldEffect.cpp  DepthOfFieldEffect.h  Effect.cpp  Effect.h
src/image/: Image.cpp  Image.h  ImageJPEG.cpp  ImageJPEG.h  ImageTGA.cpp  ImageTGA.h
src/interpolator/: Interpolator.cpp  Interpolator.h
src/material/: BlackBodyRadiation.cpp  BlackBodyRadiation.h  Color.cpp  Color.h  Environment.h  Material.cpp  Material.h  TexturedMaterial.cpp  (+1 more)
(+19 files in other folders)
